# ak

./: AGENTS.md  CONSTITUTION.md  Cargo.toml  README.md
.github/workflows/: ci.yml
ak-cashflow/: Cargo.toml
ak-cli/: Cargo.toml
ak-contract/: Cargo.toml
ak-contract/src/: ast.rs  contract.rs  lib.rs  observable.rs  parser.rs  simulation.rs  visitor.rs
ak-contract/src/observable/: constant.rs  stock_price.rs
ak-contract/src/visitor/: debug.rs  evaluator.rs  variable_index.rs
ak-core/: Cargo.toml
ak-core/src/: calendar.rs  compounding.rs  day_count.rs  frequency.rs  jiff_ext.rs  lib.rs  schedule.rs
ak-core/src/day_count/: actual_360.rs  actual_36525.rs  actual_365_fixed.rs  isda_1_1.rs  isda_actual_actual.rs  isma_30_360.rs  nl_365.rs  psa_30_360_eom.rs  sia_30_360_eom.rs  sia_30_360_neom.rs
ak-random/: Cargo.toml
ak-random/benches/: rng_bench.rs
ak-random/src/: gaussian.rs  lib.rs  mrg32k3a.rs  rng.rs
ak-repl/: Cargo.toml
ak-repl/src/: main.rs
ak-sim/: Cargo.toml
ak-sim/benches/: monte_carlo_bench.rs
ak-sim/src/: lib.rs  monte_carlo.rs
benches/: date_bench.rs  rng.rs
src/: date.rs  lib.rs
src/model/: mod.rs
src/product/: cashflow.rs  definition.rs  mod.rs  required.rs  state.rs
src/rng/: mgk32a.rs  mod.rs  sobol.rs
