[package]
name = "ak-random"
version = "0.1.0"
edition = "2024"

[dependencies]
thiserror = { workspace = true }
rand_core = { version = "0.9.3", features = ["std"] }
rayon = { workspace = true }
rand_distr = "0.5"

[dev-dependencies]
criterion = "0.6"
rand = "0.9"

[[bench]]
name = "rng_bench"
harness = false
